update health controller