@@ -5,11 +5,13 @@ import java.util.Map;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.Collections;
+
 @RestController
 public class HealthController {
 
     @GetMapping({"/", "/api/ping"})
     public Map<String, String> ping() {
-        return Map.of("status", "check hit api success.");
+        return Collections.singletonMap("status", "check hit api success.");
     }
 }
